--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.url=jdbc:postgresql://database-1.c9eusa0a831k.us-east-1.rds.am
 spring.datasource.username=postgres       # Replace with your actual database username
 spring.datasource.password=password       # Replace with your actual database password
 spring.datasource.driver-class-name=org.postgresql.Driver
+logging.level.org.springframework=DEBUG
+
 
 
 # JPA (Hibernate) Configuration
