--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=Practise
 
 # PostgreSQL Database Configuration
 spring.datasource.url=jdbc:postgresql://database-1.c9eusa0a831k.us-east-1.rds.amazonaws.com:5432/database-1
-spring.datasource.username=postgres       # Replace with your actual database username
-spring.datasource.password=password       # Replace with your actual database password
+spring.datasource.username=postgres
+spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 logging.level.org.springframework=DEBUG
 
