--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,10 @@ spring.application.name=Practise
 # PostgreSQL Database Configuration
 
 # PostgreSQL Database Configuration
-spring.datasource.url=jdbc:postgresql://database-1.c9eusa0a831k.us-east-1.rds.amazonaws.com:5432/database-1
+spring.datasource.url=jdbc:postgresql://database-1.c9eusa0a831k.us-east-1.rds.amazonaws.com:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
-
-
 
 # JPA (Hibernate) Configuration
 spring.jpa.hibernate.ddl-auto=update
